<resources>
    <string name="app_name">Biblioid</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_create_book">Création d\'un livre</string>
    <string name="bookTitle">Titre :</string>
    <string name="bookAuthor">Auteur(s) :</string>
    <string name="bookISBN">Code barre :</string>
    <string name="btnOK">Valider</string>
    <string name="openCreateBookButton">Création d\'un nouveau livre</string>
    <string name="openBookListButton">Afficher la liste des livres</string>
    <string name="title_activity_display_books">Liste des livres</string>
    <string name="book_image">The picture in the listviews</string>
    <string name="edit_bookTitle">Modifier le livre</string>
    <string name="delete_bookTitle">Supprimer le livre</string>
    <string name="title_activity_display_filters">Liste des filtres</string>
    <string name="bookfilterListButton">Afficher la liste des filtres</string>
    <string name="title_activity_create_filter">Créer un filtre</string>
    <string name="display_filter">Appliquer le filtre</string>
    <string name="delete_filter">Supprimer le filtre</string>
    <string name="bookCreationDescription">Description :</string>
    <string name="scan">Scanner un livre</string>
    <string name="BookInfoTitle">Titre du livre</string>
    <string name="exportDatabaseButton">Exporter les données</string>
    <string name="importDatabaseButton">Importer les données</string>
    <string name="title_activity_folder_chooser">FolderChooser</string>
    <string name="title_activity_choose_file">ChooseFile</string>
    <string name="btnPhoto">Prendre une photo pour la couverture</string>
    <string name="loadISBN">Charger livre</string>
    <string name="db_hint">books</string>
    <string name="dialog_export">Choisissez le nom de l\'export</string>
    <string name="dialog_export_ok">OK</string>
    <string name="dialog_export_cancel">Annuler</string>
    <string name="action_raz">Remise à zéro</string>
    <string name="nameFilter">Nom du filtre:</string>
    <string name="update_filter">Modifier le filtre</string>
    <string name="bookNbPages">Nombre de pages :</string>
    <string name="bookPublisher">Editeur :</string>
    <string name="bookCategorie">Genre(s) :</string>
    <string name="bookCreationDatePublication">Date de publication :</string>
    <string name="btnModif">Modifier</string>
    <string name="seeCover">Voir la couverture</string>
    <string name="ImportExportDescription">Cette page vous permet de sauvegarder ou charger vos données afin de pouvoir les utiliser sur plusieurs appareil.</string>
    <string name="actualDBSize">Taille actuelle de la base de données :</string>
    <string name="importExportOnMemory">Import/Export sur le téléphone :</string>
    <string name="ImportExportOnCloud">Import/Export sur le cloud de google :</string>
    <string name="cloudStatut">Non connecté</string>
    <string name="lastCloudSave">Dernière sauvegarde : Il y a x temps</string>
    <string name="lastCloudSize">Dernière sauvegarde : xx ko</string>
    <string name="exportOnCloud">Creation backup sur le cloud</string>
    <string name="importFromCloud">Lecture backup sur le cloud</string>
    <string name="friendFirstName">Prénom / Surnom :</string>
    <string name="friendLastName">Nom (optionel) :</string>
    <string name="friendCloudLink">Lien cloud :</string>
    <string name="title_activity_create_friend">Création d\'un ami</string>
    <string name="loanCheckBox">Prêter le livre :</string>
    <string name="friendSpinner">Choissisez un ami :</string>
    <string name="loanDateLoan">Date du prêt :</string>
    <string name="loanDateReminder">Date de rappel pour le prêt :</string>
    <string name="service_name">Service qui notifie l\'utilisateur quand une date de rappel à été atteinte</string>
    <string name="loanDateFormat">JJ/MM/AAAA hh:mm</string>
    <string name="importExport">Import / Export</string>
    <string name="addFriend">Ajouter un ami</string>
    <string name="option">Paramètres</string>
    <string name="Info">Informations</string>
    <string name="title_activity_google_drive_rest_sharing_code">
        GoogleDriveRestSharingCodeActivity
    </string>
    <string name="enable_notification">Active les notifications</string>
    <string name="enable_notification_sum">Autorise biblioid à vous envoyer des notifications</string>
    <string name="notification_category">Notifications</string>
    <string name="notification_interval">Intervalle des notifications</string>
    <string name="notification_interval_sum">Intervalle des notifications en minute ou heure</string>
    <string name="loan_button_create">Creer Prêt</string>
    <string name="loan_button_modify">Modifier Prêt</string>
    <string name="delete_friend">Supprimer l\'ami</string>
    <string name="btnOkWithScan">Valider et scanner un nouveau livre</string>
    <string name="btnOkWithManual">Valider et ajouter un nouveau livre</string>
    <string name="displayFriends">Afficher les amis</string>
    <string name="update_friend">Modifier l\'ami</string>
    <string name="btnCancelWithScan">Annuler et scanner un nouveau livre</string>
    <string name="btnCancelWithManual">Annuler et ajouter un nouveau livre</string>
    <string name="btnCancelBook">Annuler</string>
    <string name="pref_erase_database">pref_erase_database</string>
</resources>
