<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/notification_category"
        android:key="pref_notification_category">

        <SwitchPreference
            android:key="pref_notif"
            android:title="@string/enable_notification"
            android:summary="@string/enable_notification_sum"
            android:defaultValue="true"/>

        <ListPreference
            android:dependency="pref_notif"
            android:key="pref_notif_interval"
            android:title="@string/notification_interval"
            android:dialogTitle="@string/notification_interval"
            android:summary="%s"
            android:entries="@array/notification_interval_entries"
            android:entryValues="@array/notification_interval_values"
            android:defaultValue="0.05"/>


    </PreferenceCategory>

    <PreferenceCategory
        android:title="Affichage"
        android:key="pref_display_order_category">

        <ListPreference
            android:key="pref_books_display_order"
            android:title="Ordre d'affichage des livres"
            android:dialogTitle="Ordre d'affichage des livres"
            android:summary="%s"
            android:entries="@array/display_order"
            android:entryValues="@array/display_order_values"
            android:defaultValue="Ordre de création"/>

        <ListPreference
            android:key="pref_filters_display_order"
            android:title="Ordre d'affichage des filtres"
            android:dialogTitle="Ordre d'affichage des filtres"
            android:summary="%s"
            android:entries="@array/display_order"
            android:entryValues="@array/display_order_values"
            android:defaultValue="Ordre de création"/>

        <ListPreference
            android:key="pref_grid_zoom"
            android:title="Niveau de zoom dans la liste des livres."
            android:dialogTitle="Nombre de livre par lignes"
            android:summary="%s"
            android:entries="@array/grid_zoom_entries"
            android:entryValues="@array/grid_zoom_value"
            android:defaultValue="3"/>



    </PreferenceCategory>

    <PreferenceCategory
        android:title="Base de donnée"
        android:key="pref_database">

        <Preference
            android:key="@string/pref_erase_database"
            android:title="Remise à zéro de la bibliothèque"
            />


    </PreferenceCategory>



</PreferenceScreen>